Bug 365034 - The Filechoosing-dialoug cannot handly folders to compare anymore
Summary: The Filechoosing-dialoug cannot handly folders to compare anymore
Status: RESOLVED FIXED
Alias: None
Product: kompare
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Kompare bugs
URL:
Keywords:
: 374102 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-03 11:20 UTC by Christo
Modified: 2017-03-18 20:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christo 2016-07-03 11:20:34 UTC
trying to compare several Folder with content can only be done via commandline , not from GUI anymore

Reproducible: Sometimes

Steps to Reproduce:
1.  Starting Kompare and choosing two folders to compare
2. instead of using choosen selected folder, the GUI expects only files to be choosen and want to dive deeper


Actual Results:  
Dives into Folder instead of selecting it to proceed

Expected Results:  
Folder is taken as Source and reading all containing files and further folders

works great when given as CLI-options
Comment 1 Kevin Kofler 2016-12-24 00:58:19 UTC
*** Bug 374102 has been marked as a duplicate of this bug. ***
Comment 2 John Salatas 2017-03-18 12:31:26 UTC
Git commit 83c6ba01eb92628f1b6a3cbdab6fbd391ee3207c by John Salatas.
Committed on 18/03/2017 at 12:31.
Pushed by jsalatas into branch 'master'.

Fix the file choosing dialog not handling folders to compare anymore

Differential Revision: https://phabricator.kde.org/D5096

M  +88   -5    libdialogpages/filespage.cpp
M  +6    -0    libdialogpages/filespage.h
M  +2    -2    main.cpp

https://commits.kde.org/kompare/83c6ba01eb92628f1b6a3cbdab6fbd391ee3207c
Comment 3 John Salatas 2017-03-18 20:00:43 UTC
Git commit 847d3030f0f7952d0e29af4973084f4250d013c9 by John Salatas.
Committed on 18/03/2017 at 20:00.
Pushed by jsalatas into branch 'master'.

Fix the file choosing dialog not handling folders to compare anymoreHEADmaster

Fixed some issues introduced in commit 83c6ba01eb92628f1b6a3cbdab6fbd391ee3207c

Differential Revision: https://phabricator.kde.org/D5096

M  +3    -3    libdialogpages/filespage.cpp

https://commits.kde.org/kompare/847d3030f0f7952d0e29af4973084f4250d013c9