Fix the file choosing dialog not handling folders to compare anymore

BUG: 365034

Differential Revision: https://phabricator.kde.org/D5096